--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
       var map;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 8
+          center: {
+            lat: -36.2128949, lng: 113.7075864
+          },
+          zoom: 4
         });
       }
     </script>
