--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
       var map;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
-          center: {
-            lat: -36.2128949, lng: 113.7075864
-          },
+          center: { lat: -36.2128949, lng: 113.7075864 },
           zoom: 4
         });
       }
