--- a/index.html
+++ b/index.html
@@ -4,19 +4,7 @@
     <title>Simple Map</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
-    <style>
-      /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-      #map {
-        height: 100%;
-      }
-      /* Optional: Makes the sample page fill the window. */
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-    </style>
+    <link rel="stylesheet/css" href="./main.css">
   </head>
   <body>
     <div id="map"></div>
@@ -29,6 +17,10 @@
         });
       }
     </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlruIMLXnWzesWcwfh8eGPg_6vU8MloVo &callback=initMap"></script>
+    <script 
+      async 
+      defer 
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlruIMLXnWzesWcwfh8eGPg_6vU8MloVo &callback=initMap">
+    </script>
   </body>
 </html>
