--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Simple Map</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
-    <link rel="stylesheet/css" href="./main.css">
+    <link rel="stylesheet" type="text/css" href="./main.css">
   </head>
   <body>
     <div id="map"></div>
@@ -17,10 +17,7 @@
         });
       }
     </script>
-    <script 
-      async 
-      defer 
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlruIMLXnWzesWcwfh8eGPg_6vU8MloVo &callback=initMap">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBlruIMLXnWzesWcwfh8eGPg_6vU8MloVo &callback=initMap">
     </script>
   </body>
 </html>
